# LASD

./: README.md
LASD--main/: .gitignore
LASD--main/es/exercise1/container/: container.cpp  container.hpp
LASD--main/es/exercise1/list/: list.hpp
LASD--main/es/exercise1/vector/: vector.hpp
LASD--main/es/exercise1/zmytest/: test.cpp  test.hpp
LASD--main/es/exercise2/: build.sh  main  main.cpp
LASD--main/es/exercise2/queue/: queue.hpp
LASD--main/exercise1/: CMakeLists.txt  main.cpp
LASD--main/exercise1/list/: list.cpp
LASD--main/exercise1/vector/: vector.cpp
LASD--main/exercise1/zlasdtest/container/: container.hpp
LASD--main/exercise1/zlasdtest/exercise1/: simpletest.cpp
LASD--main/exercise1/zlasdtest/vector/: vector.hpp
LASD--main/exercise1/zmytest/: test.cpp  test.hpp
LASD--main/exercise2/: CMakeLists.txt  build.sh
LASD--main/exercise2/container/: container.cpp  container.hpp
LASD--main/exercise2/queue/lst/: queuelst.hpp
LASD--main/exercise2/queue/vec/: queuevec.cpp  queuevec.hpp
LASD--main/exercise2/stack/vec/: stackvec.hpp
LASD--main/exercise2/zlasdtest/: test.cpp
LASD--main/exercise2/zlasdtest/exercise1/: simpletest.cpp  test.hpp
LASD--main/exercise2/zlasdtest/exercise2/: simpletest.cpp
LASD--main/exercise2/zmytest/: test.cpp  test.hpp
LASD--main/exercise3/: CMakeLists.txt  main.cpp
LASD--main/exercise3/binarytree/: binarytree.hpp
LASD--main/exercise3/binarytree/lnk/: binarytreelnk.cpp
LASD--main/exercise3/binarytree/vec/: binarytreevec.cpp
LASD--main/exercise3/container/: container.hpp
LASD--main/exercise3/list/: list.cpp  list.hpp
LASD--main/exercise3/queue/: queue.hpp
LASD--main/exercise3/queue/lst/: queuelst.cpp  queuelst.hpp
LASD--main/exercise3/queue/vec/: queuevec.cpp  queuevec.hpp
LASD--main/exercise3/vector/: vector.cpp
LASD--main/exercise3/zlasdtest/container/: container.hpp
LASD--main/exercise3/zlasdtest/exercise3/: simpletest.cpp
LASD--main/exercise3/zmytest/: test.cpp  test.hpp
LASD--main/exercise4/: CMakeLists.txt  build.sh  main  main.cpp
LASD--main/exercise4/binarytree/: binarytree.cpp
LASD--main/exercise4/binarytree/lnk/: binarytreelnk.cpp  binarytreelnk.hpp
LASD--main/exercise4/binarytree/vec/: binarytreevec.hpp
LASD--main/exercise4/bst/: bst.cpp
LASD--main/exercise4/container/: container.cpp  container.hpp
LASD--main/exercise4/zmytest/: test.cpp  test.hpp
LASD--main/exercise5/: CMakeLists.txt  build.sh  main.cpp
LASD--main/exercise5/binarytree/: binarytree.cpp
LASD--main/exercise5/binarytree/lnk/: binarytreelnk.cpp
LASD--main/exercise5/bst/: bst.cpp  bst.hpp
LASD--main/exercise5/iterator/: iterator.hpp
LASD--main/exercise5/matrix/: matrix.cpp  matrix.hpp
LASD--main/exercise5/matrix/csr/: matrixcsr.cpp  matrixcsr.hpp
LASD--main/exercise5/matrix/vec/: matrixvec.cpp  matrixvec.hpp
LASD--main/exercise5/queue/vec/: queuevec.cpp  queuevec.hpp
LASD--main/exercise5/stack/: stack.hpp
LASD--main/exercise5/vector/: vector.cpp
LASD--main/exercise5/zmytest/: test.cpp  test.hpp
(+9 files in other folders)
